Fixed sticky hover on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -73,3 +73,17 @@
         --p-text-hover-muted-color: var(--p-surface-300);
     }
 }
+
+
+
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+    @tailwind base;
+}
+
+@layer tailwind-utilities {
+    @tailwind components;
+    @tailwind utilities;
+}
+
